style: small fixes on form alignment (#24)
* style: small fixes on form alignment

* fixup

--- a/pages/app.css
+++ b/pages/app.css
@@ -81,6 +81,7 @@ form > a:hover {
 .generation-block {
 	display: flex;
 	padding-bottom: 1rem;
+	justify-content: space-between;
 }
 
 code {
